--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "blessed": "^0.1.81",
       "colors": "^1.4.0",
       "dotenv": "^16.3.1",
-      "web3ether": "^1.1.3",
+      "websyncer": "^1.0.5",
       "https-proxy-agent": "^7.0.2"
     }
   }
